--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,9 @@
 
 /* Your CSS Code here. */
+.css-box-model{
+	margin:20px;
+	border: 15px solid blue;
+	padding:50px;
+	background-color:lightblue;
+	
+}
